--- a/view/admin/add_coupon.ejs
+++ b/view/admin/add_coupon.ejs
@@ -43,6 +43,16 @@
             />
           </label>
           <label class="block text-sm mt-1">
+            <span class="text-gray-700 dark:text-gray-400">Min Cart Amount</span>
+            <input
+              name="minCartAmount"
+              value=""
+              type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              required
+            />
+          </label>
+          <label class="block text-sm mt-1">
             <span class="text-gray-700 dark:text-gray-400">Expire After(days)</span>
             <input
               name="expireAfter"
