--- a/view/user/checkout.ejs
+++ b/view/user/checkout.ejs
@@ -69,7 +69,7 @@
                     <span>₹<%= total %>.00</span>
                   </a>
                 </li>
-              
+
                 <li>
                   <a href="#"
                     >Shipping
@@ -277,11 +277,21 @@
         code,
       },
     }).then((response) => {
-      if(response.checkstatus=='success'){
-        $(`<div class="ml-4 py-2">${code}<button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>`).insertAfter("#coupon_code");
-
-        $(`<li><a href="#">Discount<span>-₹${response.discount}</span></a></li>`).insertAfter("#sub_total");
-        $('#discounted_total').replaceWith(`<span id="discounted_total">₹${response.discountedAmount+50}.00</span>`)
+      if (response.checkstatus == 'success') {
+        $(
+          `<div class="ml-4 py-2">${code}<button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>`
+        ).insertAfter('#coupon_code');
+        if (response.discountIsPercent) {
+          $(`<li><a href="#">Discount<span>-%${response.discount}</span></a></li>`).insertAfter('#sub_total');
+          $('#discounted_total').replaceWith(
+            `<span id="discounted_total">₹${Math.round((response.discountedTotal * (1-(response.discount/100))) + 50)}</span>`
+          );
+        } else {
+          $(`<li><a href="#">Discount<span>-₹${response.discount}</span></a></li>`).insertAfter('#sub_total');
+          $('#discounted_total').replaceWith(
+            `<span id="discounted_total">₹${response.discountedTotal - response.discount + 50}.00</span>`
+          );
+        }
       }
       customAlert(response.message, response.checkstatus);
     });
