--- a/view/user/order_success.ejs
+++ b/view/user/order_success.ejs
@@ -1,115 +1,121 @@
 <%- include('partials/header.ejs') %>
 
 <section class="confirmation_part padding_top">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="confirmation_tittle">
-            <span>Thank you. Your order has been received.</span>
-          </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="confirmation_tittle">
+          <span>Thank you. Your order has been received.</span>
         </div>
-        <div class="col-lg-6 col-lx-4">
-          <div class="single_confirmation_details">
-            <h4>order info</h4>
-            <ul>
-              <li>
-                <p>order number</p><span>: <%= order._id.toString().slice(-10) %> </span>
-              </li>
-              <li>
-                <p>date</p><span>: <%= order.date %></span>
-              </li>
-              <li>
-                <p>total</p><span>: INR <%= order.total+50 %></span>
-              </li>
-              <li>
-                <p>payment method</p><span>: <%= order.payment %></span>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-6 col-lx-4">
-          <div class="single_confirmation_details">
-            <h4>Billing Address</h4>
-            <ul>
-                <li>
-                  <p>House</p>
-                  <span>: <%= order.address.house %></span>
-                </li>
-                <li>
-                  <p>Landmark</p>
-                  <span>: <%= order.address.landmark %></span>
-                </li>
-                <li>
-                  <p>City</p>
-                  <span>: <%= order.address.city %></span>
-                </li>
-                <li>
-                  <p>State</p>
-                  <span>: <%= order.address.state %></span>
-                </li>
-                <li>
-                  <p>postcode</p>
-                  <span>: <%= order.address.pincode %></span>
-                </li>
-              </ul>
-          </div>
-        </div>
-
       </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="order_details_iner">
-            <h3>Product Details</h3>
-            <table class="table table-borderless">
-              <thead>
-                <tr>
-                  <th scope="col" colspan="2">Product</th>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Total</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% order.products.forEach(el => { %>
-                
-                <tr>
-                  <th colspan="2"><span><%= el.product.title %> </span></th>
-                  <th>x<%= el.quantity %></th>
-                  <th> <span>₹ <%= el.subtotal %></span></th>
-                </tr>
- 
-                <% }) %>
-                <tr id="success_subtotal">
-                  <th colspan="3">Subtotal</th>
-                  <th> ₹<%= order.total %>.00</th>
-                </tr>
-                <tr>
-                  <th colspan="3">Shipping</th>
-                  <th>₹50.00</th>
-                </tr>
-              </tbody>
-              <tfoot>
-                <tr id="success_total">
-                  <th scope="col" colspan="3"></th>
-                  <th scope="col"> ₹<%= order.total+50 %>.00</th>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
+      <div class="col-lg-6 col-lx-4">
+        <div class="single_confirmation_details">
+          <h4>order info</h4>
+          <ul>
+            <li>
+              <p>order number</p>
+              <span>: <%= order._id.toString().slice(-10) %> </span>
+            </li>
+            <li>
+              <p>date</p>
+              <span>: <%= order.date %></span>
+            </li>
+            <li>
+              <p>total</p>
+              <span>: INR <%= order.total+50 %></span>
+            </li>
+            <li>
+              <p>payment method</p>
+              <span>: <%= order.payment %></span>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-lg-6 col-lx-4">
+        <div class="single_confirmation_details">
+          <h4>Billing Address</h4>
+          <ul>
+            <li>
+              <p>House</p>
+              <span>: <%= order.address.house %></span>
+            </li>
+            <li>
+              <p>Landmark</p>
+              <span>: <%= order.address.landmark %></span>
+            </li>
+            <li>
+              <p>City</p>
+              <span>: <%= order.address.city %></span>
+            </li>
+            <li>
+              <p>State</p>
+              <span>: <%= order.address.state %></span>
+            </li>
+            <li>
+              <p>postcode</p>
+              <span>: <%= order.address.pincode %></span>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
-  </section>
-  <script>
-    if ('<%= discountAmt %>') {
-      $(`<tr>
-                  <th colspan="3">Discount</th>
-                  <th>-₹${'<%= discountAmt %>'}.00</th>
-                </tr>`).insertAfter(`#success_subtotal`);
-    $(`#success_total`).replaceWith(`<tr id="success_total">
-                  <th scope="col" colspan="3"></th>
-                  <th scope="col"> ₹${'<%= order.total+50-discountAmt %>'}.00</th>
-                </tr>`);
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="order_details_iner">
+          <h3>Product Details</h3>
+          <table class="table table-borderless">
+            <thead>
+              <tr>
+                <th scope="col" colspan="2">Product</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% order.products.forEach(el => { %>
+
+              <tr>
+                <th colspan="2"><span><%= el.product.title %> </span></th>
+                <th>x<%= el.quantity %></th>
+                <th><span>₹ <%= el.subtotal %></span></th>
+              </tr>
+
+              <% }) %>
+              <tr id="success_subtotal">
+                <th colspan="3">Subtotal</th>
+                <th>₹<%= order.total %>.00</th>
+              </tr>
+              <tr>
+                <th colspan="3">Shipping</th>
+                <th>₹50.00</th>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr id="success_total">
+                <th scope="col" colspan="3"></th>
+                <th scope="col">₹<%= order.total+50 %>.00</th>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<script>
+  if ('<%= discountAmt %>') {
+    if ('<%= isPercent %>') {
+      $(`<tr><th colspan="3">Discount</th><th>-%${'<%= discountAmt %>'}</th></tr>`).insertAfter(`#success_subtotal`);
+      $(`#success_total`).replaceWith(
+        `<tr id="success_total"><th scope="col" colspan="3"></th><th scope="col"> ₹${'<%= Math.round(order.total*(1-(discountAmt/100)))+50 %>'}.00</th></tr>`
+      );
+    } else {
+      $(`<tr><th colspan="3">Discount</th><th>-₹${'<%= discountAmt %>'}.00</th></tr>`).insertAfter(`#success_subtotal`);
+      $(`#success_total`).replaceWith(
+        `<tr id="success_total"><th scope="col" colspan="3"></th><th scope="col"> ₹${'<%= order.total+50-discountAmt %>'}.00</th></tr>`
+      );
     }
-  </script>
+  }
+</script>
 
 <%- include('partials/footer.ejs') %>
