--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -1,8 +1,5 @@
-<%- include('partials/header.ejs') %> <% if (msg.length>0) { %>
-<script defer>
-  alert('<%= msg %>');
-</script>
-<% } %>
+<%- include('partials/header.ejs') %> 
+
 
 <!-- banner part start-->
 <section class="banner_part">
@@ -576,5 +573,10 @@
   </div>
 </section>
 <!--::subscribe_area part end::-->
-
 <%- include('partials/footer.ejs') %>
+<% if (msg.length>0) { %>
+  <script defer>
+    customAlert('<%= msg %>','success');
+   
+  </script>
+  <% } %>
