--- a/view/user/shop.ejs
+++ b/view/user/shop.ejs
@@ -1,26 +1,5 @@
 <%- include('partials/header.ejs') %>
 
-<% if (msg.length>0) { %>
-    <script defer>alert('<%= msg %>')</script>
-   <% } %>
-
-    <!-- breadcrumb start-->
-    <!-- <section class="breadcrumb breadcrumb_bg">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="breadcrumb_iner">
-                        <div class="breadcrumb_iner_item">
-                            <h2>Shop Category</h2>
-                            <p>Home <span>-</span> Shop Category</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- breadcrumb start-->
-
     <!--================Category Product Area =================-->
     <section class="cat_product_area section_padding">
         <div class="container">
@@ -130,7 +109,7 @@
 
                     <div class="row align-items-center latest_product_inner">
 
-                        <% product.forEach(element => { %>
+                        <% product.forEach((element,index) => { %>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="single_product_item">
                                     <a href="/product-details/<%= element._id %> ">
@@ -147,16 +126,16 @@
                                         <% if (user) { %>
 
                                             <% if (wishlistProducts.products.some(el => el.product.equals(element._id))) {  %>
-                                                <a href="/remove-from-wishlist/<%= element._id %>"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                                <a id="heart_symbol<%= index %>" onclick="updateWish('<%= element._id %>','<%= index %>')"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                                     <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
                                                 </svg></i></a>
                                             <% }else{ %>
-                                            <a href="/add-to-wishlist/<%= element._id %>"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                            <a id="heart_symbol<%= index %>" onclick="updateWish('<%= element._id %>','<%= index %>')"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                                                 <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                                             </svg></i></a>
                                             <% } %>
                                         <% }else{ %>
-                                            <a href="/add-to-wishlist/<%= element._id %>"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                            <a href="/signin"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                                                 <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                                               </svg></i></a>
                                         <% } %>
@@ -253,3 +232,8 @@
 
     
 <%- include('partials/footer.ejs') %>
+<% if (msg.length>0) { %>
+    <script defer>
+        customAlert('<%= msg %>','success')
+        </script>
+   <% } %>
